terminei a página esportiva

--- a/descricaoMasculina/descricaoMascEsportiva.html
+++ b/descricaoMasculina/descricaoMascEsportiva.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meias Kids Masculina</title>
+    <title>Meias Sene</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="style-kids.css">
+    <link rel="stylesheet" href="style-masc.css">
 </head>
 
 <body>
     <header id="header">
         <div class="cabecalhoUm">
             <div class="imagemLogo">
-                <a href="index.html"><img src="img/logoSene.png" alt="Logo meias sene"></a>
+                <a href="index.html"><img src="../img/logoSene.png" alt="Logo meias sene"></a>
             </div>
         </div>
         <div class="linha"></div>
@@ -116,28 +116,25 @@
             <div class="TodasInformacoes">
                 <div class="informacoes">
                     <h2 id="titulo"></h2>
-                    <p id="codigo"></p> <!-- Código: 4631 -->
+                    <p id="codigo"></p>  
                 </div>
-
+            
                 <div class="linhaDescricaoDoProduto"></div>
                 <div class="informacoesPrecoTamanho">
                     <h3 class="precoContainer" id="preco"></h3>
                     <h3 class="numeracao" id="numeracao"></h3>
-                    <button class="btn-shopee"> Compre na </button>
+                    <button class="btn-shopee"> Compre na Shopee</button>
                     <button class="btn-whatsapp"> Compre via <i class="fab fa-whatsapp"></i></button>
                 </div>
             </div>
         </div>
-        <style>
 
-        </style>
         <section class="DescricaoDoProduto">
             <h2 class="titulo-DescricaoProduto">DESCRIÇÃO DO PRODUTO</h2>
             <div class="linhaUm-Descricao-do-produto"></div>
             <div class="linhaDois-Descricao-do-produto"></div>
             <div class="texto-Descricao">
-                <p>Meias Kids Masculinas - Estilo e Conforto para os Pequenos Heróis <br> 
-                    As meias kids masculinas são a escolha perfeita para acompanhar a energia e o dinamismo dos meninos! Produzidas com material de alta qualidade, garantem conforto extremo e respirabilidade, mantendo os pés secos durante todo o dia. Com elástico flexível, proporcionam ajuste ideal sem apertar, permitindo liberdade de movimento para brincar e correr à vontade. Disponíveis em diversas cores e estampas divertidas, como carros, dinossauros e super-heróis, as meias trazem um toque de aventura ao visual. Resistentes e fáceis de lavar, são a combinação ideal de praticidade e estilo!</p>
+                <p id="descricao">As meias esportivas são essenciais para quem busca desempenho e conforto durante atividades físicas. Produzidas com materiais que absorvem a umidade e oferecem ventilação, elas mantêm os pés secos e protegidos contra o atrito. O design ergonômico proporciona um ajuste seguro, reduzindo o risco de bolhas e melhorando a performance. Essas meias são a escolha ideal para atletas de todos os níveis, combinando funcionalidade e estilo em cada par.</p>
                 <div class="elementosDoTexto-Descricao">
                     <p>• Algodão 60% </p>
                     <p>• Poliamida 28% </p>
@@ -174,7 +171,7 @@
 
 
 
-                <div class="Quadrado-da-Meia-DesenhadaAzulEscuro-Baby" id="divMeiasBaby">
+                <div class="Quadrado-da-Meia-Desenhada-Baby" id="divMeiasBaby">
                     <div class="Imagem-CompreJunto"><img src="../img-baby/MeiaDesenhadaAzulEscuro-Feminina.png" alt="">
                     </div>
                     <div class="informacoesMeiaBaby">
@@ -209,10 +206,10 @@
                             <div class="VerdeAguaSapatilha"></div>
                         </div>
                     </div>
-                    <div id="preco-informacoes-Baby">
+                    <div class="preco-informacoes" id="preco-informacoes-meia-preta-cinza-branca">
                         <h3 class="preco">R$ 3,40 </h3>
                         <h3 class="texto-a-vista">Á Vista</h3>
-                        <button class="botao-euQuero">Eu Quero!</button>
+                        <button class="botao-euQuero" id="botao-da-meia-preta-branca-cinza">Eu Quero!</button>
                     </div>
                 </div>
             </div>
@@ -306,7 +303,7 @@
             const urlParams = new URLSearchParams(window.location.search);
             const cor = urlParams.get('cor');
 
-            fetch('../meiasKids.json')
+            fetch('../meiasMasc.json')
                 .then(response => response.json())
                 .then(meias => {
                     const meia = meias[cor];
@@ -320,7 +317,8 @@
                         document.getElementById('preco').textContent = meia.preco || '';
                         document.getElementById('titulo').textContent = meia.titulo || '';
                         document.getElementById('numeracao').textContent = meia.numeracao || '';
-                        const mensagem = `Olá, gostaria de comprar a meia ${meia.titulo}, do preço: ${meia.preco}.  ${meia.codigo || 'não informado'}.`;
+
+                        const mensagem = `Olá, gostaria de comprar a meia ${meia.titulo}, do preço: ${meia.preco} e da numeração: ${meia.numeracao}. ${meia.codigo || 'não informado'}.`;
                         const whatsappLink = `https://wa.me/5516997021783?text=${encodeURIComponent(mensagem)}`;
                         whatsappButton.setAttribute('onclick', `window.open('${whatsappLink}', '_blank')`);
                     } else {
@@ -362,11 +360,8 @@
                 AzulEscuroSapatilha: '../img-baby/MeiaBrancaAzulEscuroSapatilha-Masculina.png',
                 AzulClaroSapatilha: '../img-baby/MeiaBrancaAzulClaroSapatilha-Masculina.png',
                 VerdeAguaSapatilha: '../img-baby/MeiaBrancaVerdeAguaSapatilha-Masculina.png'
-            },
+             }
 
-            'Quadrado-da-Meia-DesenhadaAzulEscuro-Baby': {
-                AzulEscuro: '../img-baby/MeiaDesenhadaAzulEscuro-Feminina.png'
-            },
         };
 
 
@@ -420,7 +415,7 @@
                 const corSelecionada = selectedColor;
 
                 if (corSelecionada) {
-                    window.location.href = `descricaoKids/descricaoKidsMas.html?cor=${corSelecionada}`;
+                    window.location.href = `descricaoFeminina/CanoCurtoFeminina.html?cor=${corSelecionada}`;
                 } else {
                     alert('Por favor, selecione uma cor.');
                 }
