falta o json da meia pro
Para terminar totalmente as meias pro falta o json

--- a/esportivaMasc.html
+++ b/esportivaMasc.html
@@ -124,14 +124,14 @@
                         </div>
                     </div>
                     <div class="preco-informacoes">
-                        <h3 class="preco">R$ 6,00 </h3>
+                        <h3 class="preco">R$ 6,00</h3>
                         <h3 class="texto-a-vista">Á Vista</h3>
                         <button class="botao-euQuero">Eu Quero!</button>
                     </div>
                 </div>
 
                 <div class="Quadrado-da-meia-esportiva-horse" id="div-meia">
-                    <div class="container"> <img src="img-masculino/masculinaEsportivaCinzaHorse.png" alt="">
+                    <div class="container"> <img src="img-masculino/masculinaEsportivaCinzaHorse.png" alt="Meia Esportiva Horse Masculina">
                     </div>
                     <div class="informacoes-meia">
                         <h3 class="Subtitulo">Meia Esportiva Horse Masculina</h3>
@@ -143,14 +143,14 @@
                         </div>
                     </div>
                     <div class="preco-informacoes">
-                        <h3 class="preco">R$ 6,00 </h3>
+                        <h3 class="preco">R$ 6,00</h3>
                         <h3 class="texto-a-vista">Á Vista</h3>
                         <button class="botao-euQuero">Eu Quero!</button>
                     </div>
                 </div>
 
                 <div class="Quadrado-da-meia-esportiva-s" id="div-meia">
-                    <div class="container"> <img src="img-masculino/masculinaEsportivaPretaS.png" alt="Meia astronauta">
+                    <div class="container"> <img src="img-masculino/masculinaEsportivaPretaS.png" alt="Meia Esportiva S Masculina">
                     </div>
                     <div class="informacoes-meia">
                         <h3 class="Subtitulo">Meia Esportiva S Masculina</h3>
@@ -169,7 +169,7 @@
                 </div>
 
                 <div class="Quadrado-da-meia-esportiva-polo" id="div-meia">
-                    <div class="container"> <img src="img-masculino/masculinaEsportivaPretaPolo.png" alt="Meia triângulo">
+                    <div class="container"> <img src="img-masculino/masculinaEsportivaPretaPolo.png" alt="Meia Esportiva Polo Masculina">
                     </div>
                     <div class="informacoes-meia">
                         <h3 class="Subtitulo">Meia Esportiva Polo Masculina</h3>
@@ -188,7 +188,7 @@
                 </div>
 
                 <div class="Quadrado-da-meia-esportiva-aero" id="div-meia">
-                    <div class="container"> <img src="img-masculino/masculinaEsportivaBrancaAero.png" alt="Meia marinheiro">
+                    <div class="container"> <img src="img-masculino/masculinaEsportivaBrancaAero.png" alt="Meia Esportiva Aero Branca Masculina">
                     </div>
                     <div class="informacoes-meia">
                         <h3 class="Subtitulo">Meia Esportiva Aero Branca Masculina</h3>
@@ -207,7 +207,7 @@
                 </div>
 
                 <div class="Quadrado-da-meia-esportiva-kit01" id="div-meia">
-                    <div class="container"> <img src="img-masculino/masculinaEsportivaCinzaKit01.png" alt="Meia leão">
+                    <div class="container"> <img src="img-masculino/masculinaEsportivaCinzaKit01.png" alt="Meia Esportiva Masculina - Kit Nº1">
                     </div>
                     <div class="informacoes-meia">
                         <h3 class="Subtitulo">Meia Esportiva Masculina - Kit Nº1</h3>
@@ -226,7 +226,7 @@
                 </div>
 
                 <div class="Quadrado-da-meia-esportiva-cano-curto" id="div-meia">
-                    <div class="container"> <img src="img-masculino/masculinaEsportivaCanoCurtoBrancaLisa.png" alt="Meia marinheiro">
+                    <div class="container"> <img src="img-masculino/masculinaEsportivaCanoCurtoBrancaLisa.png" alt="Meia Esportiva Cano Curto Lisa Masculina">
                     </div>
                     <div class="informacoes-meia">
                         <h3 class="Subtitulo">Meia Esportiva Cano Curto Lisa Masculina</h3>
@@ -245,7 +245,7 @@
                 </div>
 
                 <div class="Quadrado-da-meia-esportiva-kit02" id="div-meia">
-                    <div class="container"> <img src="img-masculino/masculinaEsportivaPretaKit02.png" alt="Meia leão">
+                    <div class="container"> <img src="img-masculino/masculinaEsportivaPretaKit02.png" alt="Meia Esportiva Masculina - Kit Nº2">
                     </div>
                     <div class="informacoes-meia">
                         <h3 class="Subtitulo">Meia Esportiva Masculina - Kit Nº2</h3>
@@ -264,7 +264,7 @@
                 </div>
 
                 <div class="Quadrado-da-meia-esportiva-cano-curto-kit" id="div-meia">
-                    <div class="container"> <img src="img-masculino/masculinaEsportivaCanoCurtoKit3Pares.png" alt="Kit 3 pares de meia">
+                    <div class="container"> <img src="img-masculino/masculinaEsportivaCanoCurtoKit3Pares.png" alt="Meia Esportiva Cano Curto Masculina - Kit Nº1">
                     </div>
                     <div class="informacoes-meia">
                         <h3 class="Subtitulo">Meia Esportiva Cano Curto Masculina - Kit Nº1</h3>
