--- a/canoCurtoMasculina.html
+++ b/canoCurtoMasculina.html
@@ -108,106 +108,178 @@
 
     <main>
         <section id="meiasDesMasc">
-            <h1 class="titulo">Pró Masculino</h1>
+            <h1 class="titulo">Cano Curto / Cano Curto Desenhada Masculino</h1>
             <div class="todas-as-meias-des-masc">
 
-                <div class="Quadrado-da-meia-quadriculada-laranja" id="div-meia">
-                    <div class="container"> <img src="img-masculino/masculinaProQuadriculadoLaranja01.png" alt="Meia Pró Quadriculado Laranja Masculina">
+                <div class="Quadrado-da-meia-esportiva-lisa" id="div-meia">
+                    <div class="container"> <img src="img-masculino/masculinaEsportivaBrancaLisa.png" alt="Meia Masculina Esportiva Lisa">
                     </div>
                     <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Pró Quadriculado Laranja Masculina</h3>
-                        <h3 class="numeracao">39 á 44</h3>
-                        <div class="cores-laranja-pro">
-                            <div class="laranjaPro"></div>
+                        <h3 class="Subtitulo">Meia Masculina Esportiva Lisa</h3>
+                        <h3 class="numeracao">39 á 43</h3>
+                        <div class="cores-branca-preta-cinza">
+                            <div class="brancaLisa"></div>
+                            <div class="pretaLisa"></div>
+                            <div class="cinzaLisa"></div>
                         </div>
                     </div>
                     <div class="preco-informacoes">
-                        <h3 class="preco">R$ 11,20</h3>
+                        <h3 class="preco">R$ 6,00</h3>
                         <h3 class="texto-a-vista">Á Vista</h3>
                         <button class="botao-euQuero">Eu Quero!</button>
                     </div>
                 </div>
 
-                <div class="Quadrado-da-meia-quadriculada-branca" id="div-meia">
-                    <div class="container"> <img src="img-masculino/masculinaProQuadriculadoBranco01.png" alt="Meia Pró Quadriculado Branca Masculina">
+                <div class="Quadrado-da-meia-esportiva-horse" id="div-meia">
+                    <div class="container"> <img src="img-masculino/masculinaEsportivaCinzaHorse.png" alt="Meia Esportiva Horse Masculina">
                     </div>
                     <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Pró Quadriculado Branca Masculina</h3>
-                        <h3 class="numeracao">39 á 44</h3>
-                        <div class="cores-branca-pro">
-                            <div class="brancaPro"></div>
+                        <h3 class="Subtitulo">Meia Esportiva Horse Masculina</h3>
+                        <h3 class="numeracao">39 á 43</h3>
+                        <div class="cores-branca-preta-cinza02">
+                            <div class="cinzaHorse"></div>
+                            <div class="brancaHorse"></div>
+                            <div class="pretaHorse"></div>
                         </div>
                     </div>
                     <div class="preco-informacoes">
-                        <h3 class="preco">R$ 11,20</h3>
+                        <h3 class="preco">R$ 6,00</h3>
                         <h3 class="texto-a-vista">Á Vista</h3>
                         <button class="botao-euQuero">Eu Quero!</button>
                     </div>
                 </div>
 
-                <div class="Quadrado-da-meia-faixa-vermelha" id="div-meia">
-                    <div class="container"> <img src="img-masculino/masculinaProFaixaVermelha01.png" alt="Meia Pró Faixa Vermelha Masculina">
+                <div class="Quadrado-da-meia-esportiva-s" id="div-meia">
+                    <div class="container"> <img src="img-masculino/masculinaEsportivaPretaS.png" alt="Meia Esportiva S Masculina">
                     </div>
                     <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Pró Faixa Vermelha Masculina</h3>
-                        <h3 class="numeracao">39 á 44</h3>
-                        <div class="cores-vermelha-pro">
-                            <div class="vermelhaPro"></div>
+                        <h3 class="Subtitulo">Meia Esportiva S Masculina</h3>
+                        <h3 class="numeracao">39 á 43</h3>
+                        <div class="cores-branca-preta-cinza03">
+                            <div class="pretaS"></div>
+                            <div class="brancaS"></div>
+                            <div class="cinzaS"></div>
                         </div>
                     </div>
                     <div class="preco-informacoes">
-                        <h3 class="preco">R$ 11,20</h3>
+                        <h3 class="preco">R$ 6,00</h3>
                         <h3 class="texto-a-vista">Á Vista</h3>
                         <button class="botao-euQuero">Eu Quero!</button>
                     </div>
                 </div>
 
-                <div class="Quadrado-da-meia-faixa-amarela" id="div-meia">
-                    <div class="container"> <img src="img-masculino/masculinaProFaixaAmarela01.png" alt="Meia Pró Faixa Amarela Masculina">
+                <div class="Quadrado-da-meia-esportiva-polo" id="div-meia">
+                    <div class="container"> <img src="img-masculino/masculinaEsportivaPretaPolo.png" alt="Meia Esportiva Polo Masculina">
                     </div>
                     <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Pró Faixa Amarela Masculina</h3>
-                        <h3 class="numeracao">39 á 44</h3>
-                        <div class="cores-amarela-pro">
-                            <div class="amarelaPro"></div>
+                        <h3 class="Subtitulo">Meia Esportiva Polo Masculina</h3>
+                        <h3 class="numeracao">39 á 43</h3>
+                        <div class="cores-branca-preta-cinza04">
+                            <div class="pretaPolo"></div>
+                            <div class="brancaPolo"></div>
+                            <div class="cinzaPolo"></div>
                         </div>
                     </div>
                     <div class="preco-informacoes">
-                        <h3 class="preco">R$ 11,20</h3>
+                        <h3 class="preco">R$ 6,00</h3>
                         <h3 class="texto-a-vista">Á Vista</h3>
                         <button class="botao-euQuero">Eu Quero!</button>
                     </div>
                 </div>
 
-                <div class="Quadrado-da-meia-degrade-azul" id="div-meia">
-                    <div class="container"> <img src="img-masculino/masculinaProDegradeAzul01.png" alt="Meia Pró Degradê Azul Masculina">
+                <div class="Quadrado-da-meia-esportiva-aero" id="div-meia">
+                    <div class="container"> <img src="img-masculino/masculinaEsportivaBrancaAero.png" alt="Meia Esportiva Aero Branca Masculina">
                     </div>
                     <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Pró Degradê Azul Masculina</h3>
-                        <h3 class="numeracao">39 á 44</h3>
-                        <div class="cores-azul-pro">
-                            <div class="azulPro"></div>
+                        <h3 class="Subtitulo">Meia Esportiva Aero Branca Masculina</h3>
+                        <h3 class="numeracao">39 á 43</h3>
+                        <div class="cores-branca-preta-cinza05">
+                            <div class="brancaAero"></div>
+                            <div class="pretaAero"></div>
+                            <div class="cinzaAero"></div>
                         </div>
                     </div>
                     <div class="preco-informacoes">
-                        <h3 class="preco">R$ 11,20</h3>
+                        <h3 class="preco">R$ 6,00</h3>
                         <h3 class="texto-a-vista">Á Vista</h3>
                         <button class="botao-euQuero">Eu Quero!</button>
                     </div>
                 </div>
 
-                <div class="Quadrado-da-meia-degrade-verde" id="div-meia">
-                    <div class="container"> <img src="img-masculino/masculinaProDegradeVerde01.png" alt="Meia Pró Degradê Verde Masculina">
+                <div class="Quadrado-da-meia-esportiva-kit01" id="div-meia">
+                    <div class="container"> <img src="img-masculino/masculinaEsportivaCinzaKit01.png" alt="Meia Esportiva Masculina - Kit Nº1">
                     </div>
                     <div class="informacoes-meia">
-                        <h3 class="Subtitulo">Meia Pró Degradê Verde Masculina</h3>
-                        <h3 class="numeracao">39 á 44</h3>
-                        <div class="cores-verde-pro">
-                            <div class="verdePro"></div>
+                        <h3 class="Subtitulo">Meia Esportiva Masculina - Kit Nº1</h3>
+                        <h3 class="numeracao">39 á 43</h3>
+                        <div class="cores-branca-preta-cinza06">
+                            <div class="cinzaKit01"></div>
+                            <div class="brancaKit01"></div>
+                            <div class="pretaKit01"></div>
                         </div>
                     </div>
                     <div class="preco-informacoes">
-                        <h3 class="preco">R$ 11,20</h3>
+                        <h3 class="preco">R$ 18,00</h3>
+                        <h3 class="texto-a-vista">Á Vista</h3>
+                        <button class="botao-euQuero">Eu Quero!</button>
+                    </div>
+                </div>
+
+                <div class="Quadrado-da-meia-esportiva-cano-curto" id="div-meia">
+                    <div class="container"> <img src="img-masculino/masculinaEsportivaCanoCurtoBrancaLisa.png" alt="Meia Esportiva Cano Curto Lisa Masculina">
+                    </div>
+                    <div class="informacoes-meia">
+                        <h3 class="Subtitulo">Meia Esportiva Cano Curto Lisa Masculina</h3>
+                        <h3 class="numeracao">39 á 43</h3>
+                        <div class="cores-branca-preta-cinza07">
+                            <div class="brancaCurto"></div>
+                            <div class="pretaCurto"></div>
+                            <div class="cinzaCurto"></div>
+                        </div>
+                    </div>
+                    <div class="preco-informacoes">
+                        <h3 class="preco">R$ 6,00</h3>
+                        <h3 class="texto-a-vista">Á Vista</h3>
+                        <button class="botao-euQuero">Eu Quero!</button>
+                    </div>
+                </div>
+
+                <div class="Quadrado-da-meia-esportiva-kit02" id="div-meia">
+                    <div class="container"> <img src="img-masculino/masculinaEsportivaPretaKit02.png" alt="Meia Esportiva Masculina - Kit Nº2">
+                    </div>
+                    <div class="informacoes-meia">
+                        <h3 class="Subtitulo">Meia Esportiva Masculina - Kit Nº2</h3>
+                        <h3 class="numeracao">39 á 43</h3>
+                        <div class="cores-branca-preta-cinza08">
+                            <div class="pretaKit02"></div>
+                            <div class="brancaKit02"></div>
+                            <div class="cinzaKit02"></div>
+                        </div>
+                    </div>
+                    <div class="preco-informacoes">
+                        <h3 class="preco">R$ 18,00</h3>
+                        <h3 class="texto-a-vista">Á Vista</h3>
+                        <button class="botao-euQuero">Eu Quero!</button>
+                    </div>
+                </div>
+
+                <div class="Quadrado-da-meia-esportiva-cano-curto-kit" id="div-meia">
+                    <div class="container"> <img src="img-masculino/masculinaEsportivaCanoCurtoKit3Pares.png" alt="Meia Esportiva Cano Curto Masculina - Kit Nº1">
+                    </div>
+                    <div class="informacoes-meia">
+                        <h3 class="Subtitulo">Meia Esportiva Cano Curto Masculina - Kit Nº1</h3>
+                        <h3 class="numeracao">39 á 43</h3>
+                        <div class="cores-branca-preta-cinza09">
+                            <div class="kitTresCores">
+                                <p>1</p>
+                            </div>
+                            <div class="brancaCurtoKit"></div>
+                            <div class="pretaCurtoKit"></div>
+                            <div class="cinzaCurtoKit"></div>
+                        </div>
+                    </div>
+                    <div class="preco-informacoes">
+                        <h3 class="preco">R$ 18,00</h3>
                         <h3 class="texto-a-vista">Á Vista</h3>
                         <button class="botao-euQuero">Eu Quero!</button>
                     </div>
@@ -295,24 +367,52 @@
     </footer>
     <script>
         const imagensPorCor = {
-            'Quadrado-da-meia-quadriculada-laranja': {
-                laranjaPro: 'img-masculino/masculinaProQuadriculadoLaranja02.png'
+            'Quadrado-da-meia-esportiva-lisa': {
+                brancaLisa: 'img-masculino/masculinaEsportivaBrancaLisa.png',
+                pretaLisa: 'img-masculino/masculinaEsportivaPretaLisa.png',
+                cinzaLisa: 'img-masculino/masculinaEsportivaCinzaLisa.png'
             },
-            'Quadrado-da-meia-quadriculada-branca': {
-                brancaPro: 'img-masculino/masculinaProQuadriculadoBranco02.png'
+            'Quadrado-da-meia-esportiva-horse': {
+                brancaHorse: 'img-masculino/masculinaEsportivaBrancaHorse.png',
+                pretaHorse: 'img-masculino/masculinaEsportivaPretaHorse.png',
+                cinzaHorse: 'img-masculino/masculinaEsportivaCinzaHorse.png'
             },
-            'Quadrado-da-meia-faixa-vermelha': {
-                vermelhaPro: 'img-masculino/masculinaProFaixaVermelha02.png'
+            'Quadrado-da-meia-esportiva-s': {
+                brancaS: 'img-masculino/masculinaEsportivaBrancaS.png',
+                pretaS: 'img-masculino/masculinaEsportivaPretaS.png',
+                cinzaS: 'img-masculino/masculinaEsportivaCinzaS.png'
             },
-            'Quadrado-da-meia-faixa-amarela': {
-                amarelaPro: 'img-masculino/masculinaProFaixaAmarela02.png',
+            'Quadrado-da-meia-esportiva-polo': {
+                brancaPolo: 'img-masculino/masculinaEsportivaBrancaPolo.png',
+                pretaPolo: 'img-masculino/masculinaEsportivaPretaPolo.png',
+                cinzaPolo: 'img-masculino/masculinaEsportivaCinzaPolo.png',
             },
-            'Quadrado-da-meia-degrade-azul': {
-                azulPro: 'img-masculino/masculinaProDegradeAzul02.png'
+            'Quadrado-da-meia-esportiva-aero': {
+                brancaAero: 'img-masculino/masculinaEsportivaBrancaAero.png',
+                pretaAero: 'img-masculino/masculinaEsportivaPretaAero.png',
+                cinzaAero: 'img-masculino/masculinaEsportivaCinzaAero.png',
             },
-            'Quadrado-da-meia-degrade-verde': {
-                verdePro: 'img-masculino/masculinaProDegradeVerde02.png',
-            }
+            'Quadrado-da-meia-esportiva-kit01': {
+                brancaKit01: 'img-masculino/masculinaEsportivaBrancaKit01.png',
+                pretaKit01: 'img-masculino/masculinaEsportivaPretaKit01.png',
+                cinzaKit01: 'img-masculino/masculinaEsportivaCinzaKit01.png'
+            },
+            'Quadrado-da-meia-esportiva-cano-curto': {
+                brancaCurto: 'img-masculino/masculinaEsportivaCanoCurtoBrancaLisa.png',
+                pretaCurto: 'img-masculino/masculinaEsportivaCanoCurtoPretaLisa.png',
+                cinzaCurto: 'img-masculino/masculinaEsportivaCanoCurtoCinzaLisa.png'
+            },
+            'Quadrado-da-meia-esportiva-kit02': {
+                brancaKit02: 'img-masculino/masculinaEsportivaBrancaKit02.png',
+                pretaKit02: 'img-masculino/masculinaEsportivaPretaKit02.png',
+                cinzaKit02: 'img-masculino/masculinaEsportivaCinzaKit02.png'
+            },
+            'Quadrado-da-meia-esportiva-cano-curto-kit': {
+                brancaCurtoKit: 'img-masculino/masculinaEsportivaCanoCurtoBrancaKit3Pares.png',
+                pretaCurtoKit: 'img-masculino/masculinaEsportivaCanoCurtoPretaKit3Pares.png',
+                cinzaCurtoKit: 'img-masculino/masculinaEsportivaCanoCurtoCinzaKit3Pares.png',
+                kitTresCores: 'img-masculino/masculinaEsportivaCanoCurtoKit3Pares.png'
+            },
         };
 
         document.querySelectorAll('.todas-as-meias-des-masc > div').forEach((quadrado) => {
@@ -320,7 +420,7 @@
             const imgMeia = quadrado.querySelector('img');
 
             // Seleciona todas as cores disponíveis para o quadrado atual
-            const cores = quadrado.querySelectorAll('.laranjaPro, .brancaPro, .vermelhaPro, .amarelaPro, .azulPro, .verdePro');
+            const cores = quadrado.querySelectorAll('.brancaLisa, .pretaLisa, .cinzaLisa, .brancaHorse, .pretaHorse, .cinzaHorse, .brancaS, .pretaS, .cinzaS, .brancaPolo, .pretaPolo, .cinzaPolo, .brancaAreo, .pretaAero, .cinzaAero, .brancaKit01, .pretaKit01, .cinzaKit01, .brancaCurto, .pretaCurto, .cinzaCurto, .brancaKit02, .pretaKit02, .cinzaKit02, .brancaCurtoKit, .pretaCurtoKit, .cinzaCurtoKit, .kitTresCores');
 
             // Obtém o nome da classe do quadrado (primeiro nome de classe)
             const quadradoId = quadrado.className.split(' ')[0];
@@ -361,17 +461,19 @@
                 const corSelecionada = selectedColor;
 
                 if (corSelecionada) {
-                    window.location.href = `descricaoMasculina/descricaoMascPro.html?cor=${corSelecionada}`;
+                    window.location.href = `descricaoMasculina/descricaoMascEsportiva.html?cor=${corSelecionada}`;
                 } else {
                     alert('Por favor, selecione uma cor.');
                 }
             });
+
+
         });
 
-        document.querySelectorAll('.cores-laranja-pro div, .cores-branca-pro div, .cores-vermelha-pro div, .cores-amarela-pro div, .cores-azul-pro div, .cores-verde-pro div').forEach(cor => {
+        document.querySelectorAll('.cores-branca-preta-cinza div, .cores-branca-preta-cinza02 div, .cores-branca-preta-cinza03 div, .cores-branca-preta-cinza04 div, .cores-branca-preta-cinza05 div, .cores-branca-preta-cinza06 div, .cores-branca-preta-cinza07 div, .cores-branca-preta-cinza08 div, .cores-branca-preta-cinza09 div').forEach(cor => {
             cor.addEventListener('click', function () {
                 // Remove a borda de qualquer cor previamente selecionada em todos os grupos de cores
-                document.querySelectorAll('.cores-laranja-pro div, .cores-branca-pro div, .cores-vermelha-pro div, .cores-amarela-pro div, .cores-azul-pro div, .cores-verde-pro div').forEach(c => {
+                document.querySelectorAll('.cores-branca-preta-cinza div, .cores-branca-preta-cinza02 div, .cores-branca-preta-cinza03 div, .cores-branca-preta-cinza04 div, .cores-branca-preta-cinza05 div, .cores-branca-preta-cinza06 div, .cores-branca-preta-cinza07 div, .cores-branca-preta-cinza08 div, .cores-branca-preta-cinza09 div').forEach(c => {
                     c.classList.remove('selected');
                 });
 
@@ -380,6 +482,7 @@
                 console.log('Classe "selected" adicionada a:', this); // Verifique se o elemento correto está sendo selecionado
             });
         });
+
     </script>
 
 </body>
