--- a/descricaoMasculina/descricaoMascPro.html
+++ b/descricaoMasculina/descricaoMascPro.html
@@ -134,7 +134,7 @@
             <div class="linhaUm-Descricao-do-produto"></div>
             <div class="linhaDois-Descricao-do-produto"></div>
             <div class="texto-Descricao">
-                <p id="descricao">As meias esportivas são essenciais para quem busca desempenho e conforto durante atividades físicas. Produzidas com materiais que absorvem a umidade e oferecem ventilação, elas mantêm os pés secos e protegidos contra o atrito. O design ergonômico proporciona um ajuste seguro, reduzindo o risco de bolhas e melhorando a performance. Essas meias são a escolha ideal para atletas de todos os níveis, combinando funcionalidade e estilo em cada par.</p>
+                <p>As meias "Pró Masculina" são projetadas para oferecer desempenho e conforto superior para mulheres ativas. Feitas com tecidos de alta tecnologia que absorvem o suor e permitem a respirabilidade, elas mantêm seus pés secos e confortáveis mesmo durante as atividades mais intensas. Com um ajuste ergonômico que se molda perfeitamente aos pés, essas meias proporcionam suporte e estabilidade.</p>
                 <div class="elementosDoTexto-Descricao">
                     <p>• Algodão 60% </p>
                     <p>• Poliamida 28% </p>
@@ -335,14 +335,6 @@
         });
 
     </script>
-
-
-
-
-
-
-
-
 
     <script>
         const imagensPorCor = {
