--- a/revendedor.html
+++ b/revendedor.html
@@ -72,13 +72,14 @@
                         <p>Adulto Feminino</p>
                         <div class="submenuItem">
                             <div><a href="proFeminino.html">Pró</a>
-                            <a href="CanoCurtoCasualFem.html">Casual</a>
-                            <a href="babyDesFem.html">Baby Desenhada</a>
-                            <a href="CanoLongoFem.html">Casual Cano Longo</a></div>
+                                <a href="CanoCurtoCasualFem.html">Casual</a>
+                                <a href="babyDesFem.html">Baby Desenhada</a>
+                                <a href="CanoLongoFem.html">Casual Cano Longo</a>
+                            </div>
                             <div><a href="babyColorsFem.html">Baby Color’s</a>
-                            <a href="canoCurtoFem.html">Cano Curto / Cano Curto Desenhada</a>
-                            <a href="babySapFem.html">Baby Sapatilha / Baby Malha Persa</a>
-                            <a href="kidsFem.html">Kids</a>
+                                <a href="canoCurtoFem.html">Cano Curto / Cano Curto Desenhada</a>
+                                <a href="babySapFem.html">Baby Sapatilha / Baby Malha Persa</a>
+                                <a href="kidsFem.html">Kids</a>
                             </div>
                         </div>
                     </div>
@@ -94,11 +95,13 @@
                                 <a href="#">Casual</a>
                                 <a href="babyDesMasc.html">Baby Desenhada</a>
                                 <a href="#">Casual Cano Longo</a>
-                                <a href="#">Cano Curto / Cano Curto Desenhada</a></div>
-                                <div><a href="babyColorsMasc.html">Baby Color’s</a>
+                                <a href="#">Cano Curto / Cano Curto Desenhada</a>
+                            </div>
+                            <div><a href="babyColorsMasc.html">Baby Color’s</a>
                                 <a href="babySapMasc.html">Baby Sapatilha / Baby Malha Persa</a>
                                 <a href="kidsMas.html">Kids</a>
-                                <a href="#">Juvenil</a></div>
+                                <a href="#">Juvenil</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -143,14 +146,48 @@
 
     <!-- Caixas de texto ocultas que serão exibidas ao clicar -->
     <div id="info-box-1" class="info-box">
-        <p>Ser revendedor de meias pode levar a menor rentabilidade devido à alta concorrência, que pressiona os preços e reduz as margens de lucro. 
-       <br> <strong>Clique fora para fechar.</strong></p>
+        <p>Ser revendedor de meias pode levar a menor rentabilidade devido à alta concorrência, que pressiona os preços
+            e reduz as margens de lucro.
+            <br> <strong>Clique fora para fechar.</strong>
+        </p>
     </div>
     <div id="info-box-2" class="info-box">
-        <p>As meias têm alta demanda como item essencial e oferecem variedade em estilos e tecnologias, atendendo a diferentes públicos. Essa diversidade torna-as um produto atraente e rentável para lojas. <br><strong>Clique fora para fechar.</strong> </p>
+        <p>As meias têm alta demanda como item essencial e oferecem variedade em estilos e tecnologias, atendendo a
+            diferentes públicos. Essa diversidade torna-as um produto atraente e rentável para lojas. <br><strong>Clique
+                fora para fechar.</strong> </p>
     </div>
     <div id="info-box-3" class="info-box">
-        <p>O menor custo de ser um revendedor em nossa loja pode ser alcançado por meio de negociações eficazes com fornecedores e da escolha de opções de estoque mais econômicas.<br><strong>Clique fora para fechar.</strong></p>
+        <p>O menor custo de ser um revendedor em nossa loja pode ser alcançado por meio de negociações eficazes com
+            fornecedores e da escolha de opções de estoque mais econômicas.<br><strong>Clique fora para fechar.</strong>
+        </p>
+    </div>
+
+
+
+
+    <div id="forms-revendedor">
+        <div class="forms">
+            <img src="img/circulo-forms.png" alt="">
+            <p class="forms-h2">SEJA UM REVENDEDOR EM <br><strong>3 PASSOS</strong></p>
+            <div class="topicos-forms">
+                <div class="circulo-topicos1">
+                    <p class="titulo-topicos">1.<p>
+                        <h2>Faça o Cadastro</h2>
+                        <p class="topicos1">Preencha o formulário com as suas informações e faça seu cadastro</p>
+                </div>
+                <div class="circulo-topicos2">
+                    <p class="titulo-topicos">2.<p>
+                        <h2>Receba sua confimação</h2>
+                        <p class="topicos2">Você receberá uma confirmação por email/telefone caso suas informações forem autenticadas.</p>
+                </div>
+                <div class="circulo-topicos3">
+                    <p class="titulo-topicos">3.<p>
+                        <h2>Inicie suas vendas</h2>
+                        <p class="topicos3">Compre os produtos de nossa loja e inicie suas vendas como um revendedor SENE</p>
+                </div>
+              
+        </div>
+    </div>
     </div>
 </main>
 
