--- a/socialMasculina.html
+++ b/socialMasculina.html
@@ -108,7 +108,7 @@
 
     <main>
         <section id="meiasDesMasc">
-            <h1 class="titulo">Pró Masculino</h1>
+            <h1 class="titulo">Social Masculina</h1>
             <div class="todas-as-meias-des-masc">
 
                 <div class="Quadrado-da-meia-quadriculada-laranja" id="div-meia">
