--- a/proMasculina.html
+++ b/proMasculina.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Esportiva Masculina - Meias Sene</title>
+    <title>Pró Masculina - Meias Sene</title>
     <link rel="stylesheet" href="esportvaMasc.css">
 </head>
 
